# LM-ChatAppAnalysis

./: CMakeLists.txt  Commands to clean up  DB2CSV.sh  Makefile  PrettyGUI.py  README.md  ScrollableNotebook.py  cleanup.sh  db2csv.c  decryptPrettyGUI.py  diff.sh  list.txt  loop040623.py  moving.c  msgstore.db  pull_database.py  terminals.txt  test.c  test.py  wa.db  watchdogOuput.txt  whatsAppContactsDB.csv  whatsAppMessagesDB.csv
LM-ChatAppAnalysis/: pyvenv.cfg
PreProd/: CMakeLists.txt  moving.c  permissions.c  pull_database.py  test.py
com.skype.raider/: 45C8195FFC1B5C12604F5B00EF0549AF88BC6C0FFDB62AC9BB3237A2EC414926-ScheduledCalls.db  45C8195FFC1B5C12604F5B00EF0549AF88BC6C0FFDB62AC9BB3237A2EC414926-ScheduledCalls.db-journal  RKStorage  RKStorage-journal  com.google.android.datatransport.events  com.google.android.datatransport.events-journal  com.microsoft.appcenter.persistence  com.microsoft.appcenter.persistence-journal  s4l-live:.cid.3e619d490d75ed0c.db  s4l-live:.cid.3e619d490d75ed0c.db-journal
old_version/: CMakeLists.txt  PrettyGUI.py  filewatchdog.py  moving.c
